tests/baselines/reference/objectLiteralWithSemicolons3.errors.txt
objectLiteralWithSemicolons3.ts(2,3): error TS18004: No value exists in scope for the shorthand property 'a'. Either declare one or provide an initializer.
objectLiteralWithSemicolons3.ts(2,4): error TS1005: ',' expected.
objectLiteralWithSemicolons3.ts(3,3): error TS18004: No value exists in scope for the shorthand property 'b'. Either declare one or provide an initializer.
objectLiteralWithSemicolons3.ts(3,4): error TS1005: ',' expected.
objectLiteralWithSemicolons3.ts(4,3): error TS18004: No value exists in scope for the shorthand property 'c'. Either declare one or provide an initializer.
objectLiteralWithSemicolons3.ts(4,4): error TS1005: ',' expected.


==== objectLiteralWithSemicolons3.ts (6 errors) ====
    var v = {
      a;
      ~
!!! error TS18004: No value exists in scope for the shorthand property 'a'. Either declare one or provide an initializer.
       ~
!!! error TS1005: ',' expected.
      b;
      ~
!!! error TS18004: No value exists in scope for the shorthand property 'b'. Either declare one or provide an initializer.
       ~
!!! error TS1005: ',' expected.
      c;
      ~
!!! error TS18004: No value exists in scope for the shorthand property 'c'. Either declare one or provide an initializer.
       ~
!!! error TS1005: ',' expected.
    }